[package]
name = "sbbw-exec"
version = "0.1.0"
edition = "2021"
authors = ["Sergio Ribera"]
repository = "https://github.com/SergioRibera/sbbw"

[dependencies]
hlua = "0.3"
toml = "0.5"
colored = "2.0.0"
sha-1 = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
sbbw-widget-conf = { path = "../sbbw-widget-conf" }
