[package]
name = "sbbw-widget"
version = "0.1.0"
description = "A Tauri window to show Widget"
authors = ["Sergio Ribera"]
license = ""
repository = "https://github.com/SergioRibera/sbbw"
default-run = "sbbw-widget"
edition = "2018"
# build = "src/build.rs"

# [build-dependencies]
# tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
colored = "2.0.0"
hlua = "0.3"
url = "2.2"
wry = { version = "0.13.0", features = ["protocol", "devtool", "transparent"]}
serde = { version = "1.0", features = ["derive"] }
tao = { version = "0.6.1", default-features = false, features = [ "serde" ] }
# tauri = { git = "https://github.com/tauri-apps/tauri", branch = "next", features = ["api-all"] }
sbbw-widget-conf = { path = "../sbbw-widget-conf" }
# Tauri Plugins
tauri-plugin-vibrancy = { git = "https://github.com/SergioRibera/tauri-plugin-vibrancy", branch = "dev", features = ["tao-impl"] }

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
gtk = { version = "0.15", features = [ "v3_24_30" ] }

# [features]
# default = [ "custom-protocol" ]
# custom-protocol = [ "tauri/custom-protocol" ]
