[package]
name = "sbbw"
description = "This is the launcher and manager for the Sbbw Wigets"
authors = ["Sergio Ribera"]
version = "0.1.2"
edition = "2021"

[dependencies]
futures = "0.3.19"
rocket = "0.4.10"
serde_json = "1.0"
tokio-io = "0.1.13"
colored = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.16.1", features = ["full"] }
sbbw-widget-conf = { path = "../sbbw-widget-conf" }
sbbw-exec = { path = "../sbbw-exec" }
clap = { version = "3.0.10", features = [
    "derive",
    "color",
    "suggestions",
    "wrap_help",
] }
