[package]
name = "sbbw"
description = "This is the launcher and manager for the Sbbw Wigets"
authors = ["Sergio Ribera"]
version = "0.1.2"
edition = "2021"

[dependencies]
futures = "0.3.19"
serde_json = "1.0"
tokio-io = "0.1.13"
colored = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.16.1", features = ["full"] }
sbbw-widget-conf = { path = "../sbbw-widget-conf" }
sbbw-exec = { path = "../sbbw-exec" }
structopt = { version = "0.3.26", features = [
    "color",
    "suggestions",
    "wrap_help"
] }
fork = "0.1.19"
lazy_static = "1.4.0"
actix-web = "4.1.0"
actix-files = "0.6.2"
