[package]
name = "sbbw"
description = "This is the launcher and manager for the Sbbw Wigets"
authors = ["Sergio Ribera"]
version = "0.1.2"
edition = "2021"

[dependencies]
futures = "0.3.24"
serde_json = "1.0.85"
tokio-io = "0.1.13"
colored = "2.0.0"
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.21.0", features = ["full"] }
sbbw-widget-conf = { path = "../sbbw-widget-conf" }
sbbw-exec = { path = "../sbbw-exec" }
fork = "0.1.20"
lazy_static = "1.4.0"
actix-web = "4.1.0"
actix-files = "0.6.2"
git2 = "0.15.0"
clap = { version = "3.2.20", features = [
    "derive",
    "color",
    "suggestions",
    "termcolor",
    "wrap_help",
] }
actix-rt = { version = "2.7.0", features = ["tokio-uring"] }
indicatif = "0.17.0"
reqwest = { version = "0.11.11", default-features = false, features = ["json", "blocking"] }
log = "0.4.17"
env_logger = "0.9.0"
clap-verbosity-flag = "1.0.1"
device_query = "1.1.1"
