[package]
name = "sbbw-widget"
version = "0.1.0"
description = "A Tauri window to show Widget"
authors = ["Sergio Ribera"]
license = ""
repository = "https://github.com/SergioRibera/sbbw"
default-run = "sbbw-widget"
edition = "2018"
build = "src/build.rs"

[profile.release]
opt-level = "z" # Optimize for size.
strip = true    # Automatically strip symbols from the binary.
lto = true

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
colored = "2.0.0"
url = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
sbbw-widget-conf = { path = "../../sbbw-widget-conf" }
# Tauri Plugins
tauri-plugin-positioner = "0.2"
tauri-plugin-vibrancy = { git = "https://github.com/tauri-apps/tauri-plugin-vibrancy", features = ["tauri-impl"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
